# ckanext-envvars

./: .coveragerc  .env  .travis.yml  MANIFEST.in  Makefile  README.md  README.rst  dev-requirements.txt  docker-compose.yml  pyproject.toml  setup.py  test.ini  test.sh
.github/workflows/: test.yml
ckanext/envvars/: plugin.py  tests.py  tests_2_8_and_above.py
ckanext/envvars/nose/: tests.py
ckanext/envvars/tests/: test_base.py  test_base_envvars.py  test_core_vars.py  test_gte_ckan210.py  test_lte_ckan29.py  test_plugin.py
